--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,29 +1,27 @@
 trigger:
-- master
+  - master
 
 pool:
   vmImage: ubuntu-latest
 strategy:
   matrix:
-    Python37:
-      python.version: '3.7'
     Python38:
-      python.version: '3.8'
+      python.version: "3.8"
     Python39:
-      python.version: '3.9'
+      python.version: "3.9"
 
 steps:
-- task: UsePythonVersion@0
-  inputs:
-    versionSpec: '$(python.version)'
-  displayName: 'Use Python $(python.version)'
+  - task: UsePythonVersion@0
+    inputs:
+      versionSpec: "$(python.version)"
+    displayName: "Use Python $(python.version)"
 
-- script: |
-    python -m pip install --upgrade pip
-    pip install -r requirements.txt
-  displayName: 'Install dependencies'
+  - script: |
+      python -m pip install --upgrade pip
+      pip install -r requirements.txt
+    displayName: "Install dependencies"
 
-- script: |
-    pip install pytest pytest-azurepipelines
-    pytest
-  displayName: 'pytest -v'
+  - script: |
+      pip install pytest pytest-azurepipelines
+      pytest
+    displayName: "pytest -v"
