Added - _update_hash_id method to updated the hash id after updation. | Test - update and delete methods

--- a/setup.cfg
+++ b/setup.cfg
@@ -18,6 +18,11 @@ classifiers =
 packages = find:
 python_requires = >=3.8.0
 
+[options.packages.find]
+exclude =
+    tests*
+    testing*
+
 [bdist_wheel]
 universal = True
 
