Added - cli - create, delete, purge

--- a/setup.cfg
+++ b/setup.cfg
@@ -23,6 +23,10 @@ exclude =
     tests*
     testing*
 
+[options.entry_points]
+console_scripts =
+    onstro = onstrodb.cli.main:main
+
 [bdist_wheel]
 universal = True
 
