--- a/setup.cfg
+++ b/setup.cfg
@@ -17,6 +17,8 @@ classifiers =
 [options]
 packages = find:
 python_requires = >=3.8.0
+install_requires =
+    pandas>=1.3.0
 
 [options.packages.find]
 exclude =
