--- a/setup.cfg
+++ b/setup.cfg
@@ -3,6 +3,8 @@ name = onstrodb
 version = 0.1.0
 author = Adwaith Rajesh
 author_email = adwaithrajesh3180@gmail.com
+description = A simple and efficient DataBase designed to store and use large amounts of data.
+long_description = file: README.md
 long_description_content_type = text/markdown
 url = https://github.com/Adwaith-Rajesh/onstro-db
 license = MIT
